--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @import './custom.css'; */
+
+@layer base {
+    [x-cloak] { display: none !important; }
+}
